# noteside

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml  release.yml
apps/brand/: index.html  package.json  vite.config.ts
apps/brand/src/: brand-guide.tsx  logo.tsx  main.tsx
apps/desktop/: THEMES.md  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: chords.spec.ts  command-palette.spec.ts  cursor.spec.ts  delete.spec.ts  fixtures.ts  follow.spec.ts  grep.spec.ts  markdown-preview.spec.ts  nav.spec.ts  new-note.spec.ts  note-actions.spec.ts  notebooks.spec.ts  search.spec.ts  settings-live.spec.ts  shortcuts-search.spec.ts  updates.spec.ts  vim.spec.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/Noteside.icon/: README.md  icon.json
apps/desktop/src-tauri/benches/: perf.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  error.rs  frecency.rs  lib.rs  links.rs  main.rs  models.rs  notebook.rs  search.rs  state.rs  vault.rs  watcher.rs
apps/docs/: .gitignore  README.md  package.json  react-router.config.ts  tsconfig.json  vercel.json  vite.config.ts
apps/landing/: brand.html  index.html  package.json  tsconfig.node.json  vite.config.ts
scripts/: bump-version.mjs
(+124 files in other folders)
