[package]
name = "noteside"
version = "1.3.1"
description = "Noteside — notes for keyboard people"
authors = ["Noteside"]
edition = "2021"
rust-version = "1.77.2"

# The library that main.rs (and, later, mobile) call into.
[lib]
name = "noteside_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "perf"
harness = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
nucleo-matcher = "0.3"
regex = "1"
thiserror = "1"
notify = "6"
notify-debouncer-full = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
